...
      BackHandler.addEventListener('hardwareBackPress', resetNav);
      return () =>
        BackHandler.removeEventListener('hardwareBackPress', resetNav);
    }, [resetNav]),
  );
  return (
    <SafeAreaView testID="successScreen" style={styles.container}>
      <StatusBar
        barStyle="dark-content"
        backgroundColor="#fff"
        animated={true}
      />

...
          accessibilityLabel="success image"
        />
      </View>

      <View style={styles.confirmButtonContainer}>
        <TouchableOpacity
          testID="successDoneBtn"
          onPress={() => {
            dispatch(sortByDateAddedDescending());

            resetNav();
          }}
          style={styles.confirmButton}
...
