...
  if (pendingConnection.state === pendingConnection_states.CONFIRMING) {
    buttonContainer = <Text>Confirming connection...</Text>;
  } else {
    buttonContainer = (
      <>
        <TouchableOpacity
          testID="rejectConnectionBtn"
          onPress={reject}
          style={styles.rejectButton}
        >
          <Text style={styles.buttonText}>Reject</Text>
        </TouchableOpacity>
        <TouchableOpacity
          testID="confirmConnectionBtn"
          onPress={handleConfirmation}
          style={styles.confirmButton}
        >
          <Text style={styles.buttonText}>Confirm</Text>
        </TouchableOpacity>
      </>
...
