...
 * Screen for listing devices
 */

/* Devices Screen */

/* ======================================== */
export const DevicesScreen = ({ route }) => {
  const navigation = useNavigation();
  const dispatch = useDispatch();
  const { t } = useTranslation();
  const { api } = useNodeApiContext();
  const { publicKey: signingKey } = useSelector(selectKeypair);
  const devices = useSelector(selectActiveDevices).sort((a, _b) =>
...
