...
        "passwordMatch": "Password and confirm password does not match.",
        "passwordShort": "Your password must be at least 8 characters long.",
        "recoverySigned": "One of your recovery connections signed your request"
      },
      "title": {
        "invalidSigningKey": "Invalid Signing Key",
        "pleaseConfirm": "Please Confirm"
      },
      "yes": "Yes"
    },
    "button": {
      "cancel": "Cancel",
      "copy": "Copy",
...
